# pktsplit

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/pktsplit/: __main__.py  runtime.pyi
src/: lib.rs
